--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors', minZoom: 14, maxZoom: 19});
 
 	var googleSat = L.tileLayer('http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {maxZoom: 20, subdomains:['mt0','mt1','mt2','mt3']});
+
+        var white = L.tileLayer("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQAAAAEAAQMAAABmvDolAAAAA1BMVEX///+nxBvIAAAAH0lEQVQYGe3BAQ0AAADCIPunfg43YAAAAAAAAAAA5wIhAAAB9aK9BAAAAABJRU5ErkJggg==", {minZoom: 14, maxZoom: 19});
 	  
         // Overlay layers (TMS)
         var lyr = L.tileLayer('./{z}/{x}/{y}.png', {tms: 1, opacity: 0.6, attribution: "", minZoom: 14, maxZoom: 19});
@@ -57,7 +59,7 @@
             layers: [osm, lyr]
         });
 
-        var basemaps = {"OpenStreetMap": osm, "GoogleSattelite": googleSat}
+        var basemaps = {"OpenStreetMap": osm, "GoogleSattelite": googleSat, "white": white}
         var overlaymaps = {"Layer": lyr}
 
         // Title
